--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Suggsgested">View on GitHub</a>
 
-          <h1 id="project_title">Suggsgested.github.io</h1>
-          <h2 id="project_tagline">suggsgested.com</h2>
+          <h1 id="project_title">Suggsgested.com</h1>
 
         </header>
     </div>
